added garden-log route
