# routes/index.js
@@ -3,7 +3,10 @@ const router = require('express').Router();
 // API docs route
 router.use('/', require('./swagger'));
 
-// contacts route
+// seeds route
 router.use('/seeds', require('./seeds'));
+
+// garden-log route
+router.use('/garden-log', require('./garden-log'));
 
 module.exports = router;
